# screenchat-live

./: .env.example  .gitignore  README.md  brainstormer.py  code_reviewer.py  codex_prompter.py  pyproject.toml
screenchat_live/: __init__.py  app.py  audio.py  console.py  desktop_tools.py  fs_tools.py  live_config.py  read_commands.py  repo_inspection.py  runtime.py  screen.py  session.py  session_runner.py  transcript.py
screenchat_live/desktop_scripts/: click_at.applescript  focus_window.applescript  list_windows.applescript  paste_clipboard.applescript  replace_clipboard.applescript
